# tiny

./: README.md
crates/libtiny_client/: Cargo.toml
crates/libtiny_client/src/: lib.rs  state.rs.rej
crates/libtiny_tui/src/: config.rs  tui.rs
crates/libtiny_tui/src/input_area/: input_line.rs
crates/libtiny_tui/src/tab_area/: tab_panel.rs
crates/libtiny_tui/src/tests/: mod.rs
crates/libtiny_wire/src/: lib.rs
crates/term_input/src/: lib.rs
crates/tiny/: config.yml
crates/tiny/src/: cmd.rs  config.rs  conn.rs  main.rs  tests.rs
libtiny_client/src/: lib.rs  state.rs
libtiny_gui/: Cargo.toml
libtiny_gui/src/: main.rs  tabs.rs
libtiny_tui/: Cargo.toml
libtiny_tui/benches/: tui_benches.rs
libtiny_tui/src/: exit_dialogue.rs  lib.rs  messaging.rs  notifier.rs  statusline.rs  tab.rs  termbox.rs  text_field.rs  tui.rs
libtiny_tui/src/msg_area/: line.rs  mod.rs
libtiny_tui/src/tab_area/: mod.rs
libtiny_tui/src/tests/: mod.rs
libtiny_ui/src/: lib.rs  tabs.rs
libtiny_wire/src/: lib.rs
termbox/src/: lib.rs  mock.rs
tiny/src/: utils.rs
